// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lane V4 — the phone is unchanged (golden, 390 × 844 iOS) copilot (default capability: the gate) 1`] = `
{
  "lines": 667,
  "sha256": "bec2633328f9c445f70d678aa942bc3ba60c70da23e6d013d627ea6a3ff43e48",
}
`;

exports[`lane V4 — the phone is unchanged (golden, 390 × 844 iOS) copilot new_project (project-free: the shell) 1`] = `
{
  "lines": 667,
  "sha256": "336ad61feaa93762dcc5176fc7a1ad6501cb467be5460b53d1facb888a8f43eb",
}
`;

exports[`lane V4 — the phone is unchanged (golden, 390 × 844 iOS) copilot rfi (the shell + the job-picker sheet) 1`] = `
{
  "lines": 667,
  "sha256": "d7c4d0f8fb53eb43bca143adf9dd62231ed8bc5c0fcfc3496fc7af24cd3e7ff0",
}
`;

exports[`lane V4 — the phone is unchanged (golden, 390 × 844 iOS) delay-events (log, event, evidence, notice-period, notice-form sheets) 1`] = `
{
  "lines": 702,
  "sha256": "611d55cef3856f4b2b2e922d15ac91ea7b21fd8c9efb1199173bb9e92a0d3795",
}
`;

exports[`lane V4 — the phone is unchanged (golden, 390 × 844 iOS) delay-events: a logged delay, its event sheet and the notice form 1`] = `
{
  "lines": 818,
  "sha256": "158eeb4750348571c691bbd171179c47f8c32461f7b2044c8c50b4c8bcfd2e35",
}
`;

exports[`lane V4 — the phone is unchanged (golden, 390 × 844 iOS) project-detail (the hub with the cost and revision sheets) 1`] = `
{
  "lines": 1611,
  "sha256": "dd511871e974da19f973e767365333de813778b6e11aad6641ab23f79c10cd2f",
}
`;
